2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* ChangeLog: added ChangeLog file

2008-06-18  Mario Sanchez Prada <msanchez@igalia.com>

	* Makefile.am
	* vagalume.1
	* vagalumectl.1
	Add manpage for vagalumectl

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* src/vgl-bookmark-window.c
	Make the treeview in the bookmark window reorderable

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* INSTALL
	Instructions to compile Vagalume for Moblin

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* configure.ac
	Test whether to install vagalume.service in Gnome

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* debian/gconf-defaults
	* debian/rules
	Install lastfm:// URL handler

2008-06-18  Mario Sanchez Prada <msanchez@igalia.com>

	* src/dbus.c
	* src/dbus.h
	* src/vgl-sb-plugin.c
	Broadcast Vagalume status via dbus

	Clear the VglSbPlugin using dispose() instead of finalize()

	Fix interactive mode in love/ban dbus handlers

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* Makefile.am
	* data/moblin
	* data/moblin/cover.png
	Added Moblin version of cover.png

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* configure.ac
	Fix compilation problem with dbus < 1.0

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* Makefile.am
	* README
	* THANKS
	* configure.ac
	* moblin
	* moblin/create-moblin-vagalume-button.sh
	* moblin/vagalume.desktop
	* src/uimisc.c
	* src/vgl-main-window.c
	* src/vgl-main-window.h
	Experimental Moblin support (thanks to Costas Stylianou)

2008-06-17  Alberto Garcia <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.c
	Bookmarks file renamed to bookmarks.xml

2008-06-16  Alberto Garcia <agarcia@igalia.com>

	* src/dbus.c
	* src/dbus.h
	Fix includes in dbus.{ch}

2008-06-15  Mario Sanchez Prada <msanchez@igalia.com>

	* configure.ac
	* contrib/vagalumectl
	* src/controller.c
	* src/dbus.c
	* src/dbus.h
	D-BUS support for the Desktop version

2008-06-12  Mario Sanchez Prada <msanchez@igalia.com>

	* contrib/vagalumectl